K8s/microservices/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
    tier: frontend

spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        tier: frontend
  
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 3000
        seccompProfile:
          type: RuntimeDefault
          
      containers:
      - name: web
        image: robotshop/rs-web:2.1.0
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          httpGet:
            path: /nginx_status
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /nginx_status
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10

        resources:
          requests:
            cpu: "350m"      
            memory: "200Mi"  
          limits:
            cpu: "700m"      
            memory: "400Mi" 

        ports:
        - containerPort: 8080
