K8s/microservices/web/pod-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-network-policy
spec:
  podSelector:
    matchLabels:
      app: web 
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ingress 
    ports:
    - protocol: TCP
      port: 8080

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
      
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

  - to:
    - podSelector:
        matchLabels:
          app: catalogue

    - podSelector:
        matchLabels:
          app: user

    - podSelector:
        matchLabels:
          app: cart

    - podSelector:
        matchLabels:
          app: shipping

    - podSelector:
        matchLabels:
          app: payment
    ports:
    - protocol: TCP
      port: 8080

  - to:
    - podSelector:
        matchLabels:
          app: php
    ports:
    - protocol: TCP
      port: 80
